# g-scan-rx

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.env.example  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: adr-writer.md  clean-arch-reviewer.md  code-reviewer.md  eval-reviewer.md  glossary-maintainer.md  migration-reviewer.md  new-test-implementer.md  rule-implementer.md  security-auditor.md  tool-adder.md  verify-rule-reviewer.md  wiki-curator.md  wiki-diagrammer.md  wiki-ingester.md  wiki-synthesizer.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_catalog_items.py
frontend/: .dockerignore  index.html  vite.config.ts
frontend/claude_design/: G-Scan-RX.dc.html
frontend/src/: App.tsx  index.css
src/: config.py
src/eval/: baseline.json  build_baseline.py  harness.py  judge.py  metrics.py  seed_golden_set.py
src/infrastructure/: config.py
tests/: conftest.py
tests/application/: test_agent_graph.py  test_agent_graph_guardrails.py  test_extract_prescription.py  test_ingest_catalog.py  test_react_loop.py  test_verify_medication.py
tests/domain/: test_entities.py  test_value_objects.py
tests/eval/: test_generator.py  test_golden_set.py  test_judge.py  test_metrics.py
tests/infrastructure/: test_adapter_scrubbing.py  test_catalog_repository.py  test_catalog_verifier_adapter.py  test_cima.py  test_circuit_breaker.py  test_embedding_anomaly_detector.py  test_gemini_normalizer_adapter.py  test_gemini_vision_adapter.py  test_guardrails.py  test_image_cache.py  test_mcp_server.py  test_normalizer_adapter.py  (+4 more)
(+98 files in other folders)
