[project]
name = "g-scan-rx"
version = "0.1.0"
description = "Asistente agéntico que digitaliza y verifica recetas médicas manuscritas"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
catalog = [
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pgvector>=0.3",
    "psycopg[binary]>=3.1",
]
vision = [
    "anthropic>=0.40",
    "openai>=1.51",
    "google-genai>=1.0",
    "pillow>=11.0",
    "opencv-python-headless>=4.10",
    "albumentations>=1.4",
]
retrieval = [
    "sentence-transformers>=3.2",
    "rank-bm25>=0.2",
]
agent = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "fastmcp>=2.0",
]
guardrails = [
    "presidio-analyzer>=2.2",
    "llm-guard>=0.3",
]
observability = [
    "langfuse>=2.0",
    "opentelemetry-sdk>=1.27",
    "prometheus-client>=0.21",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "slowapi>=0.1.9",
    "cachetools>=5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
